# BloomStore

./: .clangd  .gitignore  CMakeLists.txt  README.md
includes/: bloom_store.h
src/: bloom_filter.cpp  bloom_store.cpp  bloom_store_instance.cpp  hash_funcs.cpp  log.cpp
tests/: regular_test.cpp  test.cpp
tests/some_functions/: delete_beginning_of_file.cpp  file_exists_test.cpp  parallel_hash_test.cpp  read_from_file_and_cvt_to_struct.cpp  test_bitset_tostring.cpp  write_struct_to_file.cpp
